# nemoclaw-governance

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/05-architecture-diagrams-and-technical-foundation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-security-model-section/: 06-01-PLAN.md  06-01-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-ecosystem-section-and-quick-start/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-content-pricing-and-seo/: 08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-japanese-sync-i18n/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md
.planning/research/: best-practices-2026.md  evidence-gate-action-analysis.md  nemoclaw-analysis.md
examples/: blueprint-with-agentgov.yaml  ci-workflow.yml  policy-with-agentgov.yaml
nemoclaw-presets/: agentgov-inference-profile.json  agentgov-proxy.yaml
scripts/: setup-agentgov-provider.sh
src/nemoclaw_governance/: __init__.py  cli.py  presets.py  validate.py
tests/: test_cli.py  test_policy_preset.py  test_presets.py  test_validate.py
